@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclStubInit.c,v 1.152 2008/04/16 14:29:26 das Exp $
+ * RCS: @(#) $Id: tclStubInit.c,v 1.153 2008/04/16 14:49:29 das Exp $
  */
 
 #include "tclInt.h"
@@ -34,12 +34,6 @@
 #undef Tcl_FindHashEntry
 #undef Tcl_CreateHashEntry
 
-MODULE_SCOPE TclIntStubs tclIntStubs;
-MODULE_SCOPE TclIntPlatStubs tclIntPlatStubs;
-MODULE_SCOPE TclPlatStubs tclPlatStubs;
-MODULE_SCOPE TclStubs tclStubs;
-MODULE_SCOPE TclTomMathStubs tclTomMathStubs;
-
 /*
  * WARNING: The contents of this file is automatically generated by the
  * tools/genStubs.tcl script. Any modifications to the function declarations
@@ -48,7 +42,7 @@ MODULE_SCOPE TclTomMathStubs tclTomMathStubs;
 
 /* !BEGIN!: Do not edit below this line. */
 
-TclIntStubs tclIntStubs = {
+static const TclIntStubs tclIntStubs = {
     TCL_STUB_MAGIC,
     NULL,
     NULL, /* 0 */
@@ -314,7 +308,7 @@ TclIntStubs tclIntStubs = {
     TclBackgroundException, /* 236 */
 };
 
-TclIntPlatStubs tclIntPlatStubs = {
+static const TclIntPlatStubs tclIntPlatStubs = {
     TCL_STUB_MAGIC,
     NULL,
 #if !defined(__WIN32__) && !defined(MAC_OSX_TCL) /* UNIX */
@@ -389,7 +383,7 @@ TclIntPlatStubs tclIntPlatStubs = {
 #endif /* MACOSX */
 };
 
-TclPlatStubs tclPlatStubs = {
+static const TclPlatStubs tclPlatStubs = {
     TCL_STUB_MAGIC,
     NULL,
 #ifdef __WIN32__ /* WIN */
@@ -402,7 +396,7 @@ TclPlatStubs tclPlatStubs = {
 #endif /* MACOSX */
 };
 
-TclTomMathStubs tclTomMathStubs = {
+static const TclTomMathStubs tclTomMathStubs = {
     TCL_STUB_MAGIC,
     NULL,
     TclBN_epoch, /* 0 */
@@ -474,7 +468,7 @@ static const TclStubHooks tclStubHooks = {
     &tclIntPlatStubs
 };
 
-TclStubs tclStubs = {
+static const TclStubs tclStubs = {
     TCL_STUB_MAGIC,
     &tclStubHooks,
     Tcl_PkgProvideEx, /* 0 */
@@ -1108,3 +1102,14 @@ TclStubs tclStubs = {
 };
 
 /* !END!: Do not edit above this line. */
+
+/* 
+ * Module-scope pointers to the main static stubs tables, used for package
+ * initialization via Tcl_PkgProvideEx().
+ */
+
+MODULE_SCOPE const TclStubs * const tclConstStubsPtr;
+MODULE_SCOPE const TclTomMathStubs * const tclTomMathConstStubsPtr;
+
+const TclStubs * const tclConstStubsPtr = &tclStubs;
+const TclTomMathStubs * const tclTomMathConstStubsPtr = &tclTomMathStubs;
